@@ -12,6 +12,7 @@
 \begin{edition}   <edition>\format[XMLChars,RemoveLatexCommands]{\edition}</edition> \end{edition}
 \begin{pages}   <artpagenums>\format[FormatPagesForXML]{\pages}</artpagenums> \end{pages}
 \begin{year}   <pubdate>\year</pubdate>  \end{year}
+\begin{url}  <bibliomisc><ulink url="\format[XMLChars]{\url}">\format[XMLChars]{\url}</ulink></bibliomisc>\end{url}
 \begin{abstract}   <abstract>
       <para>\format[XMLChars,RemoveLatexCommands]{\abstract}
       </para>
