@@ -1,0 +1,11 @@
+<biblioentry xreflabel="\bibtexkey" id="\bibtexkey">
+   <authorgroup>
+\begin{author}       \format[CreateDocBookAuthors]{\author} \end{author}
+   </authorgroup>
+   <citetitle pubwork="manuscript">\format[XMLChars,RemoveLatexCommands]{\title}</citetitle>
+\begin{school}   <publisher>
+      <publishername>\format[XMLChars]{\school}</publishername>
+   </publisher>\end{school}
+\begin{year}   <pubdate>\year</pubdate>  \end{year}
+\begin{url}  <bibliomisc><ulink url="\format[XMLChars]{\url}">\format[XMLChars]{\url}</ulink></bibliomisc>\end{url}
+</biblioentry>
